--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,11 @@ body {
   position: sticky;
   top: 0;
   z-index: 100;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  min-height: 64px;
 }
 
 .category-scroll-container {
