--- a/src/index.css
+++ b/src/index.css
@@ -156,7 +156,7 @@ body {
 }
 
 .product-title {
-  color: white;
+  color: rgba(255, 255, 255, 0.124);
   font-weight: 700;
   font-size: 1.1rem;
   margin-bottom: 0.35rem;
@@ -250,6 +250,9 @@ body {
   font-size: 1.5rem;
   margin: 20px 0 15px 0;
   display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
   align-items: center;
   gap: 10px;
 }
